# podcast-info

./: .gitignore  ARCHITECTURE.md  PROMPT.md  README.md  dashboard.html  pyproject.toml
.claude/skills/fetch-podcast/: skill.md
memory/: 2026-03-09.md  2026-03-10-cli.md  2026-03-10.md  2026-03-13.md
src/fetch_podcast/: __init__.py  cli.py  csv_writer.py  env.py  spotify.py
tests/: conftest.py  dashboard.spec.js  test_cli.py  test_csv_writer.py  test_env.py  test_spotify.py
